--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "license": "MIT",
   "dependencies": {
     "babel-eslint": "^10.1.0",
+    "classname": "0.0.0",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
+    "md5": "^2.3.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -26,10 +30,13 @@
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^5.0.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "sass-loader": "^10.1.1",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
